# Abstract-Machine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.txt
.github/workflows/: ci.yml
examples/: EigenOps.h  ScalarOps.h
gtest/: GTestLite.h
include/: AbstractVM.h  DSLCompiler.h  Defs.h  Expected.h  InstructionSet.h  OpImpl.h  TypeErasedVM.h  TypePack.h  TypeRegister.h  Utils.h
test/: ScalarTestOps.h  TestDslUtils.h  dsl_const_tests.cpp  dsl_tests.cpp  eigen_test.cpp  extended_tests.cpp  scalar_tests.cpp  test.cpp  test.slnx  test.vcxproj  test.vcxproj.filters  unit_tests.cpp
